General Possible Fixes on rendering bitmaps using inks